feat: add application configuration and service worker
- Introduced APP_CONFIG for centralized app settings including API URLs, caching, and performance thresholds.
- Implemented a service worker for caching and offline support.
- Enhanced error handling and logging throughout the application.
- Added caching mechanism for API responses to improve performance.
- Implemented performance monitoring for key metrics (LCP, FID, CLS).
- Updated home page to include search functionality with debouncing.
- Refactored QuranAPI service to utilize caching and retry logic.
- Added SEO management for dynamic meta tags and structured data.
- Introduced validation utilities for input validation.
- Improved overall code structure and organization.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="id" class="scroll-smooth w-full min-h-svh">
   <head>
-    <!-- Meta Tags Dasar -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
@@ -16,7 +15,6 @@
     <meta name="theme-color" content="#059669" />
     <meta name="msapplication-TileColor" content="#059669" />
 
-    <!-- SEO Meta Tags -->
     <meta
       name="robots"
       content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
@@ -32,7 +30,6 @@
       content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1"
     />
 
-    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://quranweb-digital.vercel.app/" />
     <meta
@@ -49,7 +46,6 @@
     />
     <meta property="og:site_name" content="Al-Qur'an Digital" />
 
-    <!-- Twitter / X -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
@@ -64,17 +60,14 @@
       content="https://quranweb-digital.vercel.app/logo.png"
     />
 
-    <!-- Canonical -->
     <link rel="canonical" href="https://quranweb-digital.vercel.app/" />
 
-    <!-- Icons & Manifest -->
     <link rel="shortcut icon" href="/logo.png" type="image/x-icon" />
     <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/logo.png" />
     <link rel="apple-touch-icon" href="/logo.png" />
     <link rel="manifest" href="/manifest.json" />
 
-    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -82,13 +75,11 @@
       rel="stylesheet"
     />
 
-    <!-- Title -->
     <title>
-      Al-Qur'an Digital - Baca & Dengarkan Quran Online Lengkap dengan Tafsir
+      Al-Qur&apos;an Digital &ndash; Baca & Dengarkan Quran Online Lengkap dengan Tafsir
       Indonesia
     </title>
 
-    <!-- Structured Data JSON-LD -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -119,7 +110,6 @@
       }
     </script>
 
-    <!-- Organization Schema -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -141,7 +131,6 @@
       }
     </script>
 
-    <!-- BreadcrumbList Schema -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
