feat: enhance security features with CSP and utility functions

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' fonts.googleapis.com fonts.gstatic.com cdnjs.cloudflare.com; font-src 'self' fonts.gstatic.com cdnjs.cloudflare.com; img-src 'self' data: https:; connect-src 'self' api.quran.com https://; frame-ancestors 'self'"
+    />
     <meta
       name="description"
       content="Baca Al-Qur'an digital lengkap dengan terjemahan Indonesia, tafsir, dan audio reciter berkualitas. Akses mudah semua 114 surah Al-Qur'an kapan saja, di mana saja."
@@ -76,8 +81,8 @@
     />
 
     <title>
-      Al-Qur&apos;an Digital &ndash; Baca & Dengarkan Quran Online Lengkap dengan Tafsir
-      Indonesia
+      Al-Qur&apos;an Digital &ndash; Baca & Dengarkan Quran Online Lengkap
+      dengan Tafsir Indonesia
     </title>
 
     <script type="application/ld+json">
